2018-02-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Workaround for Apple Mail, which may attach attachment as part of
	multipart/alternative entity.  It is hard to find the attachment
	for MIME-View mode user.  When
	mime-view-multipart/alternative-show-all-children is non-nil, such
	hidden attachment's button would appear.

	* mime-view.el
	(mime-view-multipart/alternative-show-all-children): New variable.
	(mime-view-multipart-descendant-button): New function.
	(mime-display-multipart/alternative): As above.

2016-08-14  Erik Hetzner  <egh@e6h.org>

	* mime-ui-en.texi: Add dir entry

	* mime-ui-ja.texi: Likewise

2016-07-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-tnef.el (mime-tnef-files): Fix corrupt result.

2016-03-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-insert-file-charset): Use default
	parameter for completing-read.  Show default value into the
	prompt.
	(mime-prompt-for-type): Simplify result checking routine.
	(mime-prompt-for-subtype): Refactored.
	(mime-prompt-for-parameter): Use default parameter for
	completing-read.
	(mime-prompt-for-encoding): Show default value into the prompt.

2016-02-24  Erik Hetzner  <egh@e6h.org>

	* mime-edit.el (mime-prompt-for-type, mime-prompt-for-type)
	(mime-prompt-for-encoding): Use default parameter to set default
	answer.
	(mime-prompt-for-encoding): Make default optional.
	(mime-edit-insert-voice): Use `mime-prompt-for-encoding' to prompt
	user for encoding.

2016-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	User is now prompted whether proceed PGP/MIME encryption when
	recipient key is not available.
	* mime-edit.el (mime-edit-encrypt-pgp-ignore-missing-keys): New
	variable.
	(mime-edit-encrypt-pgp-recipients-keys): New function.
	(mime-edit-encrypt-pgp-mime): Use them.

2016-01-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-encrypt-pgp-mime): Do not let-bind
	variable for mime-edit-make-encrypt-recipient-header here.